Update PenguinAuctionHouse.java